fixed broken layout, avatar fix, logout and account page created
tons of microfix

--- a/homeDictator/static/css/style.css
+++ b/homeDictator/static/css/style.css
@@ -1,7 +1,7 @@
 body{
 	background-image: url("../img/dark_back.png");
 	background-attachment: fixed;
-	background-repeat: no-repeat;
+	background-repeat: repeat;
 }
 .card {
 	background-color: rgba(1,2,3,0);
